# UniversalUI

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  main.xml  main2.cpp  uRmlParser.h
Bitmap/include/: uBitmap.h
Core/: CMakeLists.txt
Core/Include/Core/: UniversalUI.h  uEventController.h  uView.h
Core/Include/Core/Application/: uApplication.h
Core/Include/Core/General/: uColor.h
Core/Include/Core/Layout/: uLayoutConstraint.h  uLayoutNode.h  uLayoutTree.h
Core/Include/Core/Windowing/: nWindow.h  nWindowManager.h  uWindow.h
Core/Source/Win32/: uApplication.cpp
Core/Source/iOS/: nApplication.mm
Core/Source/macOS/: nApplication.mm
Core/include/: UniversalUI.h  uApplication.h  uView.h  uViewController.h
Core/include/Types/: uView.h  uWindow.h
Core/source/: UniversalUI.cpp  uApplication.cpp
Core/src/Types/: uWindow.cpp
GLAL/: CMakeLists.txt
GLAL/Include/: GLAL.h
GLAL/Source/Vulkan/: GLAL.c
Graphics/: CMakeLists.txt
Graphics/Include/Graphics/CSR/: Csr.h
Graphics/Include/Graphics/Canvas/: uCanvas.h  uDrawingItem.h
Graphics/Include/Graphics/Command/: uDrawingCommand.h
Graphics/Include/Graphics/General/: gColor.h  gSize.h  uColor.h  uPoint.h  uSize.h
Graphics/Include/Graphics/Surface/: gRenderSurface.h  uRenderSurface.h
Graphics/Include/Graphics/Text/: uFont.h  uGlyph.h
Graphics/Source/Win32/: gRenderSurface.cpp  uFont.cpp  uRenderSurface.cpp
Layout/include/: uLayoutConstraint.h  uLayoutNode.h
Native/: CMakeLists.txt  Info copy.plist
Native/Include/: nApplication.h  uApplication.h
Native/Include/Native/Application/: nApplication.h
Native/Source/iOS/: nApplication.mm
Rendering/include/: uCanvas.h  uRenderCommand.h  uRenderNode.h
Rendering/source/: uCanvas.cpp  uRenderNode.cpp
Test/: main copy.cpp  main.cpp
Test/Android/: settings.gradle.kts
Test/Android/app/: build.gradle.kts
Test/Android/app/src/androidTest/java/org/universalui/test/android/test/: ExampleInstrumentedTest.kt
Test/Android/app/src/main/: AndroidManifest.xml
Test/Android/app/src/main/cpp/: CMakeLists.txt
Test/Android/app/src/main/java/org/universalui/test/android/test/: MainActivity.kt
Test/Android/app/src/main/res/values/: strings.xml  themes.xml
Test/Android/app/src/main/res/values-night/: themes.xml
Test/Android/app/src/test/java/org/universalui/test/android/test/: ExampleUnitTest.kt
Test/Android/gradle/wrapper/: gradle-wrapper.properties
Test/iOS/app/app/: AppDelegate.h  AppDelegate.m  SceneDelegate.h  SceneDelegate.m  ViewController.h  ViewController.m  main.m
Test/iOS/app/app.xcodeproj/: project.pbxproj
Test/iOS/app/app.xcodeproj/project.xcworkspace/xcuserdata/seb.xcuserdatad/: UserInterfaceState.xcuserstate
Test/iOS/app/app/Base.lproj/: Main.storyboard
Test/ios/ios/: Info.plist  main.m
Test/ios/ios.xcodeproj/: project.pbxproj
Test/ios/ios.xcodeproj/project.xcworkspace/xcuserdata/seb.xcuserdatad/: UserInterfaceState.xcuserstate
Windowing/include/: uWindow.h  uWindowManager.h
Windowing/source/: uWindow.cpp  uWindowManager.cpp
lib/Application/: UApplication.cpp  UApplication.hpp  UApplicationDelegate.hpp
lib/Geometry/: URect.hpp  USize.hpp  UThickness.hpp
lib/Log/: ULog.cpp  ULog.hpp
lib/View/: UView.hpp
lib/Views/: UButton.hpp  ULabel.hpp  UPanel.hpp
lib/Window/: UWindow.cpp  UWindow.hpp  UWindowCreateInfo.hpp  UWindowDelegate.hpp  UWindowFactory.hpp
resources/: index.html
tests/ccp/: CMakeLists.txt  main.cpp
tests/csharp/UniversalUITest/: Program.cs  UniversalUITest.csproj
tests/python/: main.py
universalui/: Cargo.toml
universalui/rml-parser/: Cargo.toml
universalui/rml-parser/src/: lib.rs
universalui/universalui_api/: Cargo.toml
universalui/universalui_api/bindings/ccp/include/universalui/: universalui.h
universalui/universalui_api/bindings/csharp/UniversalUI/: UniversalUI.cs
universalui/universalui_api/bindings/python/uuiPy/: UniversalUI.py
universalui/universalui_api/src/: lib.rs
universalui/universalui_core/: Cargo.toml
universalui/universalui_core/src/: lib.rs
universalui/universalui_graphics/: Cargo.toml
universalui/universalui_native/: Cargo.toml
universalui/universalui_native/src/: lib.rs
universalui/universalui_native/src/win32/: mod.rs  win32_base.rs
universalui/universalui_test/: Cargo.toml
universalui/universalui_test/src/: main.rs
universalui/universalui_types/: Cargo.toml
universalui/universalui_types/src/: lib.rs
universalui/universalui_types/src/application/: mod.rs
universalui/universalui_types/src/ffi/: mod.rs
universalui/universalui_types/src/graphics/: mod.rs
universalui/universalui_types/src/info/: mod.rs
universalui/universalui_types/src/layout/: mod.rs
universalui/universalui_types/src/ui/: mod.rs
