[workspace]

members = [
    "rml-parser", # example test

    "universalui_types", # contains type defintions
    "universalui_native", # defines a native interface
    "universalui_graphics", # defines graphics stuff
    "universalui_core", # contains core system code
    "universalui_api", # defines simple c interface for interop
    "universalui_test", # example test
    
]