[package]
name = "universalui_api"
version = "0.1.0"
edition = "2021"

[lib]
name = "libUniversalUI"
crate-type = ["cdylib", "staticlib"]      # Creates dynamic lib

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.152"
universalui_types = { path = "../universalui_types" }
universalui_core = { path = "../universalui_core" }
universalui_native = { path = "../universalui_native" }