[package]
name = "universalui_native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
universalui_types = { path = "../universalui_types" }



[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52.0", features = [ 
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader"] }